# tempfiles-rs

./: .gitignore  .sample.env  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  db.txt  docker-compose.yml  rust-toolchain
assets/: error.css  error.min.css  error.min.css.map  global.css  global.min.css  global.min.css.map
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: Api.svelte  App.svelte  Delete.svelte  Download.svelte  Footer.svelte  Header.svelte  ShareX.svelte  Upload.svelte  api-url.js  config.js  main.js  params-builder.js
frontend/src/components/: Api.svelte  App.svelte  Delete.svelte  Download.svelte  Footer.svelte  Header.svelte  ShareX.svelte  Upload.svelte
frontend/src/scss/: colors.scss  variables.scss
scripts/: build-image.sh  env  postgres_setup.sh
scripts/postgres/: install.sh
scripts/postgres/sql/: extensions.psql  tempfiles.psql
scripts/server/: entrypoint.sh
src/: cleanup.rs  config.rs  content.rs  crypto.rs  file_id.rs  macros.rs  main.rs  password.rs
src/catchers/: client.rs  mod.rs  server.rs
src/db/: mod.rs  schemas.rs
src/routes/: api.rs  download.rs  mod.rs  sharex.rs  site.rs
src/routes/api/: delete.rs  metadata.rs  mod.rs  stats.rs  upload.rs
src/utils/: file_id.rs  mod.rs
templates/: error.hbs  index.hbs  index.html.hbs
