[package]
name = "tempfiles-rs"
version = "0.1.0"
authors = ["Edwin Svensson <tempfilesrs@olback.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = [ "json" ] }
rocket_dyn_templates = { version = "0.1.0", features = [ "handlebars" ], default-features = false }
rocket_sync_db_pools= { version = "0.1.0", features = [ "postgres_pool" ] }
rand = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
bincode = "1.2"
aead = "0.4"
aes-gcm-siv = "0.10"
